[package]
authors = ["Aaron Taner <mapkts@gmail.com>"]
description = "Fast forward and backward stream search routines."
documentation = "https://docs.rs/xfind/"
edition = "2018"
exclude = ["./github"]
keywords = ["find", "search", "stream", "substring"]
license = "MIT OR Unlicense"
name = "xfind"
readme = "README.md"
repository = "https://github.com/mapkts/xfind"
version = "0.2.0"

[dependencies]
memchr = "2.4"

[dev-dependencies]
aho-corasick = "0.7"

[[bench]]
name = "fread"
path = "benches/fread.rs"

